# rustadmin-server

./: Cargo.toml  README.md  docker-compose.yml
.github/workflows/: build.yaml
debian/: README.source  changelog  control.tpl  copyright  rustadmin-server-hbbr.install  rustadmin-server-hbbr.postinst  rustadmin-server-hbbr.postrm  rustadmin-server-hbbr.prerm  rustadmin-server-hbbs.install  rustadmin-server-hbbs.postinst  rustadmin-server-hbbs.postrm  rustadmin-server-hbbs.prerm  rustadmin-server-utils.install
docker/rootfs/etc/s6-overlay/s6-rc.d/key-secret/: up.real
kubernetes/: example.yaml
rcd/: rustadmin-hbbr  rustadmin-hbbs
src/: common.rs  database.rs  hbbr.rs  main.rs  peer.rs  relay_server.rs  rendezvous_server.rs  utils.rs
systemd/: rustadmin-hbbr.service  rustadmin-hbbs.service
ui/: Cargo.toml  setup.nsi  tauri.conf.json
ui/capabilities/: default.json
ui/html/: index.html  main.js  package-lock.json  package.json
ui/setup/service/: run.cmd
ui/src/: main.rs
ui/src/adapter/: mod.rs
ui/src/adapter/view/: desktop.rs
ui/src/usecase/: service.rs  watcher.rs
